[package]
name = "lit-precompiles"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]

[dependencies]
alloy-primitives = "0.7.5"
alloy-sol-types = "0.7.5"
hex = "0.4.3"
hd-keys-curves-wasm = { git = "https://github.com/LIT-Protocol/hd-keys-curves-wasm.git", features = ["bls", "curve25519", "decaf377", "ed448", "jubjub", "k256", "p256", "p384"] }
p256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
mini-alloc = "0.4.2"
stylus-sdk = "0.6.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.12"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
