[package]
name = "precompiles-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hd-keys-curves-wasm = { path = "../../../hd-keys-curves-wasm", optional = true }
hex = { version = "0.4.3", default-features = false }
mini-alloc = "0.4.2"
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"], optional = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"], optional = true }

[features]
default = []

p256 = ["dep:p256", "hd-keys-curves-wasm/p256"]
k256 = ["dep:k256", "hd-keys-curves-wasm/k256"]