[package]
name = "precompiles-core"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.6.0"
hex = { version = "0.4.3", default-features = false }
hd-keys-curves-wasm = { git = "https://github.com/LIT-Protocol/hd-keys-curves-wasm.git", optional = true }
mini-alloc = "0.4.2"


[features]
default = []

bls = ["hd-keys-curves-wasm/bls"]
ed25519 = ["hd-keys-curves-wasm/curve25519"]
ristretto25519 = ["hd-keys-curves-wasm/curve25519"]
decaf377 = ["hd-keys-curves-wasm/decaf377"]
ed448 = ["hd-keys-curves-wasm/ed448"]
jubjub = ["hd-keys-curves-wasm/jubjub"]
k256 = ["hd-keys-curves-wasm/k256"]
p256 = ["hd-keys-curves-wasm/p256"]
p384 = ["hd-keys-curves-wasm/p384"]