[package]
name = "hd-kdf-p256"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]

[dependencies]
alloy-primitives = "0.7.5"
alloy-sol-types = "0.7.5"   
stylus-sdk = "0.5.0"
precompiles-core = { path = "../core", features = ["p256"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.12"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds